Update syntax for Terraform 0.12

--- a/master.tf.erb
+++ b/master.tf.erb
@@ -2,7 +2,7 @@
 <% %w(a b c d e).each do |az| -%>
 
 resource "aws_instance" "master_<%= az %>" {
-  count = "${contains(keys(var.subnet_ids), "<%= az %>") ? 1 : 0}"
+  count = contains(keys(var.subnet_ids), "<%= az %>") ? 1 : 0
 
   instance_type = var.master_instance_type
   ami = var.hvm_ami
